fix(fe): fix primary color in dark mode to 255, 92%, 76%

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,7 +82,7 @@ Text Primary #0284c7
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
 
-    --primary: 262, 75%, 80%;
+    --primary: 255, 92%, 76%;
     --primary-foreground: 0 0% 9%;
 
     --secondary: 0 0% 14.9%;
